# recipe-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yml  deploy.sh  main.py  pre_commit_check.bat  pyproject.toml
alembic/: env.py
alembic/versions/: 0fc2516c6936_add_meal_plans.py  5e62a1b90d4f_add_automatic_meal_planning.py  b553d39b3d34_create_recipes_table.py
app/: main.py
app/api/: dependencies.py  health.py  imports.py  meal_plans.py  search.py  uploads.py
app/bot/: api_client.py  attachments.py  checks.py  constants.py  embeds.py  errors.py  main.py  meal_plan_errors.py  meal_plan_views.py  modals.py  text_utils.py  url_utils.py  views.py
app/cli/: sync_recipe_index.py
app/core/: config.py  http_client.py  logging.py  url_validation.py
app/database/: engine.py
app/importers/: base.py  local_html.py  manual.py  manual_text.py  markdown.py  recipe_scrapers_fallback.py  service.py  website.py
app/models/: import_result.py  ingredient_parse_result.py  meal_plan.py  meal_plan_generation.py  meal_plan_requests.py  recipe.py  recipe_detail.py  recipe_search.py  test_recipe.py
app/services/: automatic_meal_planner.py  database_recipe_search_service.py  import_debug_storage.py  ingredient_parser.py  markdown_renderer.py  meal_plan_errors.py  meal_plan_generation_errors.py  meal_plan_mapper.py  meal_plan_service.py  planning_rules.py  quantity_parser.py  recipe_candidate_service.py  recipe_delete_service.py  recipe_detail_service.py  recipe_duplicate_detector.py  recipe_import_service.py  recipe_index_sync_service.py  recipe_preview_service.py  recipe_search_service.py  recipe_storage.py  servings_parser.py
app/templates/: recipe.md.j2
app/utils/: recipe_hash.py  recipe_metadata.py  title_normalizer.py  url_normalizer.py
data/database/: app.db
data/recipes/: bbq-hotdogs-met-cheesedip-en-relish-acc153cb.md  bibimbap-korean-mixed-rice-with-meat-and-assorted-vegetables-5489cc62.md  bio-bonensalade-met-balsamicovinaigrette-97d6405e.md  carbonara-real-aaa7b638.md  gebakken-gnocchi-met-pesto-kipworst-en-broccoli-ef4c4302.md  kabuli-palaw-dfb6e88c.md  korean-beef-bulgogi-rice-bowls-the-easy-way-4be1f287.md  pastasalade-met-pesto-kikkererwten-en-sperziebonen.md  test-recipe.md  (+2 more)
tests/: conftest.py  test_health.py
(+81 files in other folders)
